# gnulibavl-cmake

./: CMakeLists.txt  README.md  init.cmake  init_solaris.cmake
